<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View"/>
    </data>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/demoLayout"
        >

        <TextView
            android:text="@string/txt_event_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_show_more"
            android:id="@+id/cb_show_more"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tv_congrats"
                android:text="@string/txt_gratulations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{cbShowMore.checked ? View.VISIBLE : View.GONE}"
                />

            <TextView
                android:text="@string/txt_repeated_expression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{tvCongrats.visibility}"
                />

            <TextView
                android:text="@string/txt_repeated_expression_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{tvCongrats.visibility}"
                />

        </LinearLayout>
    </LinearLayout>
</layout>